--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Advanced Global Coastal Flood Forecasting System
+baseurl: /Advanced-Global-Coastal-Flood-Forecasting-System
