--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Advanced Global Coastal Flood Forecasting System
-description: An ADCIRC-based global storm tide modeling system providing real-time predictions for coastal flooding globally
+title: Global Coastal Ocean Flood Forecasting System
+description: An ADCIRC-based global storm tide modeling system providing real-time predictions for coastal flooding
 baseurl: /Advanced-Global-Coastal-Flood-Forecasting-System
