--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Global Coastal Ocean Flood Forecasting System
+title: GLObal Coastal Ocean Flood Forecasting System
 description: An ADCIRC-based global storm tide modeling system providing real-time predictions for coastal flooding
