--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,10 @@ title: GLObal Coastal Ocean Flood Forecasting System
 description: An ADCIRC-based global storm tide modeling system providing real-time predictions for coastal flooding
 
 mapping:
-    provider: google_static
+    provider: openstreetmap
+	zoom: 8
+	dimensions:
+		width: 600
+		height: 400
     latitude: -20
     longitude: 34.5
